Fixed wrong position. Still unresponsive.

--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body{
 
 .box-landscape{
   position: absolute;
-  top: 25%;
-  left: 27%;
+  top: 35%;
+  left: 33%;
   padding: 20px;
   background-color: rgb(27, 27, 27);
   height:300px ;
